2013-01-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Audio.cc, audio/AudioMixer.*, objs/animate.*: Fixed bug #3601377
	  'No "gulping" sound when eating food' by having Objct_sfx have clients and
	  remember the last position of the object (or its outer container's). Also,
	  Object_sfx will play until either the position is out of range or until it
	  has played the SFX once, and delete itself afterwards, fixing a leak on a
	  sound effect played with the avatar as the SFX's source.
	* all: Eliminated some warnings.
	Rev 7292
	* objs/animate.cc,usecode/intrinsics.cc: Fixed bug #3601382 "Open book sound
	  happens when closing book" by forcing sounds played from usecode to begin
	  playing right away. Eliminated some warnings.
	Rev 7293
	* exult.cc: Fixed bug #3601383 "Avatar stuck in casting spell pose after
	  casting", a regression introduced in rev #7271. Eliminating warnings.
	Rev 7294
	* objs/objs.cc, objs/iregobjs.cc: Remove object clients before removing them
	  from the map or owner (missing from rev #7291).
	Rev 7295
	* shapes/shapevga.cc: Incorrect flag type in Actor_flags_functor.
	Rev 7296
	* all: Changed alingments to use the names from the original games, as seen
	  in the 'inspect NPC' screen. This means: friendly->good, hostile->evil,
	  unknown_align->chaotic. Added some convenience functions for actors.
	  Eliminated more warnings.
	* schedule.cc:  Changed to correct alignment checking for foes. Only NPCs
	  that can speak will actually say the schedule barks.
	Rev 7297
	* combat.cc: Battle music only changes if there are anyone in the avatar's
	  oponent list; this prevents battle music when attacking a chest.
	Rev 7298
	* schedule.cc:  Talk schedule will not talk to invisible avatar unless the
	  NPC can see invisible. Proximity usecode happens more often for the hound
	  schedule, which will cause the NPC to face the avatar if the NPC is within
	  3 tiles. Avatar will no longer lay down on the ground if double-clicking